feat: list all users GET request
